<resources>
    <string name="app_name">Total Solution App</string>
    <string name="action_admin">Admin</string>
    <string name="title_activity_output">OutputActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_MiDeviceEdit">Mi Devices</string>
    <string name="pref_header_misc">Other</string>

    <string name="header_misc_summary">(Tax)</string>

    <string name="mi_device_One">SyncUp Drive</string>
    <string name="mi_device_Two">LG GPAD Promo</string>
    <string name="mi_device_Three">Apple Watch 38MM</string>
    <string name="mi_device_Four">Apple Watch 42MM</string>
    <string name="mi_device_Five">Mi Device 5</string>
    <string name="sim_only">Sim Only</string>

    <string name="sync">Sync</string>
    <string name="sync_summary">Click to sync new data to server and device</string>

    <string name="name">Name</string>
    <string name="baseCost">Base Cost</string>
    <string name="DownPayment">Well Qualified</string>
    <string name="DownPayment1">Down Payment 1</string>
    <string name="DownPayment2">Down Payment 2</string>
    <string name="DownPayment3">Down Payment 3</string>
    <string name="DownPayment4">Down Payment 4</string>
    <string name="DownPayment5">Down Payment 5</string>
    <string name="DownPayment6">Down Payment 6</string>
    <string name="DownPayment7">Down Payment 7</string>
    <string name="DownPayment8">Down Payment 8</string>
    <string name="DownPayment9">Down Payment 9</string>
    <string name="DownPayment10">Down Payment 10</string>
    <string name="DownPayment11">Down Payment 11</string>
    <string name="DownPayment12">Down Payment 12</string>

    <string name="tax">Tax</string>










    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="miDevices">Mi Devices</string>
</resources>
