<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.eddys.danyalrequestone.MainActivity"
    tools:showIn="@layout/activity_main"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <Button
        android:id="@+id/calc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Calculate"
        android:background="@drawable/button_customs"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/autopaygroup"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.110000014" />

    <EditText
        android:id="@+id/inputOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="6"
        android:hint="Phone Cost"
        android:inputType="number"
        android:textColor="@android:color/black"
        android:textColorLink="@android:color/background_dark"


        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/activate"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/creditClassGroup"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/activate"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/activate"
        app:layout_constraintHorizontal_bias="0.15" />


    <Button
        android:id="@+id/activate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_customs"
        android:text="activation"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/upgrade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="upgrade"
        android:background="@drawable/button_customs"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/activate"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/activate"
        android:layout_marginBottom="0dp" />

    <Button
        android:id="@+id/none"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="None"
        android:background="@drawable/button_customs"
        app:layout_constraintLeft_toRightOf="@+id/activate"
        android:layout_marginLeft="0dp"
        app:layout_constraintRight_toLeftOf="@+id/upgrade"
        android:layout_marginRight="0dp"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintTop_toTopOf="@+id/activate"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/activate"
        android:layout_marginBottom="0dp" />

    <RadioGroup
        android:id="@+id/creditClassGroup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:baselineAligned="false"
        android:checkedButton="@+id/creditClass1"
        android:weightSum="1"
        app:layout_constraintBottom_toBottomOf="@+id/creditClassGroup"
        app:layout_constraintLeft_toLeftOf="@+id/inputTwo"
        app:layout_constraintRight_toRightOf="@+id/inputTwo"
        app:layout_constraintTop_toTopOf="@+id/creditClassGroup"
        app:layout_constraintHorizontal_bias="0.73">


        <RadioButton
            android:id="@+id/creditClass7"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:text="@string/DownPayment7" />

        <RadioButton
            android:id="@+id/creditClass8"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:text="@string/DownPayment8" />

        <RadioButton
            android:id="@+id/creditClass9"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:text="@string/DownPayment9" />

        <RadioButton
            android:id="@+id/creditClass10"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:text="@string/DownPayment10" />

        <RadioButton
            android:id="@+id/creditClass11"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:text="@string/DownPayment11" />

        <RadioButton
            android:id="@+id/creditClass12"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:text="@string/DownPayment12" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/creditClassGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:weightSum="1"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/inputOne"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/inputOne"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp"
        app:layout_constraintTop_toTopOf="@+id/activate"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.45999998"
        app:layout_constraintHorizontal_bias="0.32">


        <RadioButton
            android:id="@+id/creditClass1"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:text="@string/DownPayment" />

        <RadioButton
            android:id="@+id/creditClass2"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:text="@string/DownPayment2" />

        <RadioButton
            android:id="@+id/creditClass3"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:text="@string/DownPayment3" />

        <RadioButton
            android:id="@+id/creditClass4"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:text="@string/DownPayment4" />

        <RadioButton
            android:id="@+id/creditClass5"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:text="@string/DownPayment5" />

        <RadioButton
            android:id="@+id/creditClass6"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:text="@string/DownPayment6" />

    </RadioGroup>

    <EditText
        android:id="@+id/inputTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="6"
        android:hint="Down Payment"
        android:inputType="number"


        android:textColor="@android:color/black"
        android:textColorLink="@android:color/background_dark"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/upgrade"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/upgrade"
        app:layout_constraintHorizontal_bias="0.836"
        app:layout_constraintTop_toTopOf="@+id/inputOne"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/inputOne"
        android:layout_marginBottom="0dp" />

    <RadioGroup
        android:id="@+id/autopaygroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="@+id/calc"
        app:layout_constraintRight_toRightOf="@+id/calc"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.82">

        <RadioButton
            android:id="@+id/autopayoff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Auto Pay Off" />

        <RadioButton
            android:id="@+id/autopayon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Auto Pay On" />
    </RadioGroup>


</android.support.constraint.ConstraintLayout>
