<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.eddys.danyalrequestone.OutputActivity"
    tools:showIn="@layout/activity_output"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/output_one"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/simOnly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sim_only"
            android:textSize="@dimen/outputDeviceSize"
            app:layout_constraintBottom_toBottomOf="@+id/totalMonthlyCost"
            app:layout_constraintTop_toTopOf="@+id/totalupfrontcost"
            app:layout_constraintVertical_bias="0.5"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            app:layout_constraintRight_toLeftOf="@+id/totalupfrontcost"
            android:layout_marginRight="0dp"
            android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.35" />

        <TextView
            android:id="@+id/totalupfrontcost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Total Upfront Cost"
            app:layout_constraintHorizontal_bias="0.85"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/totalMonthlyCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Total Monthly Cost"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@+id/totalupfrontcost"
            app:layout_constraintLeft_toLeftOf="@+id/totalupfrontcost"
            app:layout_constraintRight_toRightOf="@+id/totalupfrontcost" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/output_two">

        <TextView
            android:id="@+id/device1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mi_device_One"
            android:textSize="@dimen/outputDeviceSize"
            app:layout_constraintBottom_toBottomOf="@+id/totalMonthlyCost1"
            app:layout_constraintTop_toTopOf="@+id/totalupfrontcost1"
            app:layout_constraintVertical_bias="0.5"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            app:layout_constraintRight_toLeftOf="@+id/totalupfrontcost1"
            android:layout_marginRight="0dp"
            android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.33" />

        <TextView
            android:id="@+id/totalupfrontcost1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Total Upfront Cost"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.85" />

        <TextView
            android:id="@+id/totalMonthlyCost1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Total Monthly Cost"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@+id/totalupfrontcost1"
            app:layout_constraintLeft_toLeftOf="@+id/totalupfrontcost1"
            app:layout_constraintRight_toRightOf="@+id/totalupfrontcost1" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/output_one">

        <TextView
            android:id="@+id/device2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mi_device_Two"
            android:textSize="@dimen/outputDeviceSize"
            app:layout_constraintBottom_toBottomOf="@+id/totalMonthlyCost2"
            app:layout_constraintTop_toTopOf="@+id/totalupfrontcost2"
            app:layout_constraintVertical_bias="0.5"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            app:layout_constraintRight_toLeftOf="@+id/totalupfrontcost2"
            android:layout_marginRight="0dp"
            android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.33" />

        <TextView
            android:id="@+id/totalupfrontcost2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Total Upfront Cost"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.85" />

        <TextView
            android:id="@+id/totalMonthlyCost2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Total Monthly Cost"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@+id/totalupfrontcost2"
            app:layout_constraintLeft_toLeftOf="@+id/totalupfrontcost2"
            app:layout_constraintRight_toRightOf="@+id/totalupfrontcost2" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/output_two">

        <TextView
            android:id="@+id/device3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mi_device_Three"
            android:textSize="@dimen/outputDeviceSize"
            app:layout_constraintBottom_toBottomOf="@+id/totalMonthlyCost3"
            app:layout_constraintTop_toTopOf="@+id/totalupfrontcost3"
            app:layout_constraintVertical_bias="0.5"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            app:layout_constraintRight_toLeftOf="@+id/totalupfrontcost3"
            android:layout_marginRight="0dp"
            android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.33" />

        <TextView
            android:id="@+id/totalupfrontcost3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Total Upfront Cost"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.85" />

        <TextView
            android:id="@+id/totalMonthlyCost3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Total Monthly Cost"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@+id/totalupfrontcost3"
            app:layout_constraintLeft_toLeftOf="@+id/totalupfrontcost3"
            app:layout_constraintRight_toRightOf="@+id/totalupfrontcost3" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="@+id/guideline5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/output_one">

        <TextView
            android:id="@+id/device4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mi_device_Four"
            android:textSize="@dimen/outputDeviceSize"
            app:layout_constraintBottom_toBottomOf="@+id/totalMonthlyCost4"
            app:layout_constraintTop_toTopOf="@+id/totalupfrontcost4"
            app:layout_constraintVertical_bias="0.5"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            app:layout_constraintRight_toLeftOf="@+id/totalupfrontcost4"
            android:layout_marginRight="0dp"
            android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.33" />


        <TextView
            android:id="@+id/totalupfrontcost4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Total Upfront Cost"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.85" />

        <TextView
            android:id="@+id/totalMonthlyCost4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Total Monthly Cost"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@+id/totalupfrontcost4"
            app:layout_constraintLeft_toLeftOf="@+id/totalupfrontcost4"
            app:layout_constraintRight_toRightOf="@+id/totalupfrontcost4" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/output_two">

        <TextView
            android:id="@+id/device5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mi_device_Five"
            android:textSize="@dimen/outputDeviceSize"
            app:layout_constraintBottom_toBottomOf="@+id/totalMonthlyCost5"
            app:layout_constraintTop_toTopOf="@+id/totalupfrontcost5"
            app:layout_constraintVertical_bias="0.5"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            app:layout_constraintRight_toLeftOf="@+id/totalupfrontcost5"
            android:layout_marginRight="0dp"
            android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.33" />

        <TextView
            android:id="@+id/totalupfrontcost5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Total Upfront Cost"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.85" />

        <TextView
            android:id="@+id/totalMonthlyCost5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Total Monthly Cost"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="32dp"
            app:layout_constraintTop_toBottomOf="@+id/totalupfrontcost5"
            app:layout_constraintLeft_toLeftOf="@+id/totalupfrontcost5"
            app:layout_constraintRight_toRightOf="@+id/totalupfrontcost5" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline2"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.16"
        tools:layout_editor_absoluteY="96dp"
        tools:layout_editor_absoluteX="0dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline3"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.32"
        tools:layout_editor_absoluteY="193dp"
        tools:layout_editor_absoluteX="0dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline4"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.48"
        tools:layout_editor_absoluteY="289dp"
        tools:layout_editor_absoluteX="0dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline5"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.64"
        tools:layout_editor_absoluteY="386dp"
        tools:layout_editor_absoluteX="0dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline6"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8"
        tools:layout_editor_absoluteY="482dp"
        tools:layout_editor_absoluteX="0dp" />


</android.support.constraint.ConstraintLayout>
